src/parser/snapshots/rbx_rsml__parser__tests__macro_call_defined_as_property_value_with_args.snap
---
source: src/parser/mod.rs
expression: parsed.ast
---
[
    Macro {
        pub_modifier: None,
        declaration: Node {
            token: SpannedToken(
                0,
                MacroDeclaration,
                6,
            ),
            leading_trivia: None,
        },
        name: Some(
            Node {
                token: SpannedToken(
                    7,
                    Identifier(
                        "Scale",
                    ),
                    12,
                ),
                leading_trivia: None,
            },
        ),
        args: Some(
            Delimited {
                left: Node {
                    token: SpannedToken(
                        12,
                        ParensOpen,
                        13,
                    ),
                    leading_trivia: None,
                },
                content: Some(
                    [
                        Node {
                            node: Node {
                                token: SpannedToken(
                                    13,
                                    MacroArgIdentifier(
                                        Some(
                                            "n",
                                        ),
                                    ),
                                    15,
                                ),
                                leading_trivia: None,
                            },
                        },
                    ],
                ),
                right: Some(
                    Node {
                        token: SpannedToken(
                            15,
                            ParensClose,
                            16,
                        ),
                        leading_trivia: None,
                    },
                ),
            },
        ),
        return_type: Some(
            (
                Node {
                    token: SpannedToken(
                        17,
                        ReturnArrow,
                        19,
                    ),
                    leading_trivia: None,
                },
                Some(
                    Node {
                        token: SpannedToken(
                            20,
                            Identifier(
                                "Datatype",
                            ),
                            28,
                        ),
                        leading_trivia: None,
                    },
                ),
            ),
        ),
        body: Some(
            MacroBody {
                open: Node {
                    token: SpannedToken(
                        29,
                        ScopeOpen,
                        30,
                    ),
                    leading_trivia: None,
                },
                content: Datatype(
                    Some(
                        Node {
                            node: Node {
                                token: SpannedToken(
                                    31,
                                    MacroArgIdentifier(
                                        Some(
                                            "n",
                                        ),
                                    ),
                                    33,
                                ),
                                leading_trivia: None,
                            },
                        },
                    ),
                ),
                close: Some(
                    Node {
                        token: SpannedToken(
                            34,
                            ScopeClose,
                            35,
                        ),
                        leading_trivia: None,
                    },
                ),
            },
        ),
    },
    Rule {
        selectors: Some(
            [
                Token(
                    Node {
                        token: SpannedToken(
                            36,
                            Identifier(
                                "Frame",
                            ),
                            41,
                        ),
                        leading_trivia: None,
                    },
                ),
            ],
        ),
        body: Some(
            Delimited {
                left: Node {
                    token: SpannedToken(
                        42,
                        ScopeOpen,
                        43,
                    ),
                    leading_trivia: None,
                },
                content: Some(
                    [
                        Assignment {
                            pub_modifier: None,
                            left: Node {
                                token: SpannedToken(
                                    44,
                                    Identifier(
                                        "Size",
                                    ),
                                    48,
                                ),
                                leading_trivia: None,
                            },
                            middle: Some(
                                Node {
                                    token: SpannedToken(
                                        49,
                                        Equals,
                                        50,
                                    ),
                                    leading_trivia: None,
                                },
                            ),
                            right: Some(
                                MacroCall {
                                    name: Node {
                                        token: SpannedToken(
                                            51,
                                            MacroCallIdentifier(
                                                Some(
                                                    "Scale",
                                                ),
                                            ),
                                            57,
                                        ),
                                        leading_trivia: None,
                                    },
                                    body: Some(
                                        Delimited {
                                            left: Node {
                                                token: SpannedToken(
                                                    57,
                                                    ParensOpen,
                                                    58,
                                                ),
                                                leading_trivia: None,
                                            },
                                            content: Some(
                                                [
                                                    Node {
                                                        node: Node {
                                                            token: SpannedToken(
                                                                58,
                                                                Number(
                                                                    "1.5",
                                                                ),
                                                                61,
                                                            ),
                                                            leading_trivia: None,
                                                        },
                                                    },
                                                ],
                                            ),
                                            right: Some(
                                                Node {
                                                    token: SpannedToken(
                                                        61,
                                                        ParensClose,
                                                        62,
                                                    ),
                                                    leading_trivia: None,
                                                },
                                            ),
                                        },
                                    ),
                                    terminator: None,
                                },
                            ),
                            terminator: Some(
                                Node {
                                    token: SpannedToken(
                                        62,
                                        SemiColon,
                                        63,
                                    ),
                                    leading_trivia: None,
                                },
                            ),
                        },
                    ],
                ),
                right: Some(
                    Node {
                        token: SpannedToken(
                            64,
                            ScopeClose,
                            65,
                        ),
                        leading_trivia: None,
                    },
                ),
            },
        ),
    },
]
