src/parser/snapshots/rbx_rsml__parser__tests__macro_call_missing_close_paren.snap
---
source: src/parser/mod.rs
expression: parsed.ast
---
[
    MacroCall {
        name: Node {
            token: SpannedToken(
                0,
                MacroCallIdentifier(
                    Some(
                        "MyMacro",
                    ),
                ),
                8,
            ),
            leading_trivia: None,
        },
        body: Some(
            Delimited {
                left: Node {
                    token: SpannedToken(
                        8,
                        ParensOpen,
                        9,
                    ),
                    leading_trivia: None,
                },
                content: Some(
                    [
                        Node {
                            node: Node {
                                token: SpannedToken(
                                    9,
                                    NumberOffset(
                                        "10px",
                                    ),
                                    13,
                                ),
                                leading_trivia: None,
                            },
                        },
                    ],
                ),
                right: None,
            },
        ),
        terminator: None,
    },
]
