src/parser/snapshots/rbx_rsml__parser__tests__macro_call_no_args.snap
---
source: src/parser/mod.rs
expression: parsed.ast
---
[
    MacroCall {
        name: Node {
            token: SpannedToken(
                0,
                MacroCallIdentifier(
                    Some(
                        "MyMacro",
                    ),
                ),
                8,
            ),
            leading_trivia: None,
        },
        body: Some(
            Delimited {
                left: Node {
                    token: SpannedToken(
                        8,
                        ParensOpen,
                        9,
                    ),
                    leading_trivia: None,
                },
                content: None,
                right: Some(
                    Node {
                        token: SpannedToken(
                            9,
                            ParensClose,
                            10,
                        ),
                        leading_trivia: None,
                    },
                ),
            },
        ),
        terminator: Some(
            Node {
                token: SpannedToken(
                    10,
                    SemiColon,
                    11,
                ),
                leading_trivia: None,
            },
        ),
    },
]
